--- a/SonarReportMaven/pom.xml
+++ b/SonarReportMaven/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>org.sonarsource.sonarqube</groupId>
             <artifactId>sonar-plugin-api</artifactId>
-            <version>${sonar.apiVersion}</version>
+            <version>7.9.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>org.sonarsource.sonarqube</groupId>
             <artifactId>sonar-testing-harness</artifactId>
-            <version>${sonar.apiVersion}</version>
+            <version>7.9.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
