--- a/SonarReportMaven/pom.xml
+++ b/SonarReportMaven/pom.xml
@@ -23,7 +23,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.sources>src/main/java</sonar.sources>
 		<app.mainClass>report.configuration.ReportCommandLine</app.mainClass>
-		<sonar.pluginClass>plugin.config.ReportSonarPlugin</sonar.pluginClass>
+		<sonar.pluginClass>config.ReportSonarPlugin</sonar.pluginClass>
 		<jdk.min.version>1.8</jdk.min.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -136,7 +136,7 @@
 			<plugin>
                 <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
                 <artifactId>sonar-packaging-maven-plugin</artifactId>
-                <version>1.18.0.372</version>
+                <version>${sonar-packaging-maven-plugin.version}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <jarName>indaba_report</jarName>
@@ -176,32 +176,53 @@
 				</configuration>
 			</plugin>
 
-			<!-- Set a JDK compiler level -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-				</configuration>
-			</plugin>
-			
-			<plugin>
-		        <!-- UTF-8 bundles are not supported by Java, so they must be converted during build -->
-		        <groupId>org.codehaus.mojo</groupId>
-		        <artifactId>native2ascii-maven-plugin</artifactId>
-		        <version>1.0-beta-1</version>
-		        <executions>
-		          <execution>
-		            <goals>
-		              <goal>native2ascii</goal>
-		            </goals>
-		          </execution>
-		        </executions>
-		    </plugin>
-		    
-			<plugin>
+			 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>${jdk.min.version}</source>
+                    <target>${jdk.min.version}</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <!-- UTF-8 bundles are not supported by Java, so they must be converted during build -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>native2ascii-maven-plugin</artifactId>
+                <version>1.0-beta-1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>native2ascii</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>3.0.0-M4</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
+            <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>1.9.1</version>
@@ -235,7 +256,6 @@
                 </execution>
                 </executions>
             </plugin>
-
-		</plugins>
+        </plugins>
 	</build>
 </project>
