--- a/SonarReportMaven/pom.xml
+++ b/SonarReportMaven/pom.xml
@@ -21,9 +21,6 @@
 		<jodatime.version>2.5</jodatime.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.sources>src/main/java</sonar.sources>
-		<app.mainClass>report.configuration.ReportCommandLine</app.mainClass>
-		<sonar.pluginClass>config.ReportSonarPlugin</sonar.pluginClass>
 		<sonar.pluginKey>reportindaba</sonar.pluginKey>
 		<jdk.min.version>1.8</jdk.min.version>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -31,6 +28,9 @@
         <sonar-packaging-maven-plugin.version>1.18.0.372</sonar-packaging-maven-plugin.version>
         <sonar.skipDependenciesPackaging>true</sonar.skipDependenciesPackaging>
         <sonar.useChildFirstClassLoader>true</sonar.useChildFirstClassLoader>
+		<sonar.sources>src/main/java</sonar.sources>
+		<app.mainClass>report.configuration.ReportCommandLine</app.mainClass>
+		<sonar.pluginClass>config.ReportSonarPlugin</sonar.pluginClass>
 	</properties>
 	
   <dependencies>
@@ -115,6 +115,11 @@
         <version>1.1</version>
         <scope>compile</scope>
     </dependency>
+    <dependency>
+	   <groupId>commons-io</groupId>
+	   <artifactId>commons-io</artifactId>
+	   <version>2.6</version>
+	</dependency>
     <!-- unit report -->
     <dependency>
         <groupId>org.sonarsource.sonarqube</groupId>
