Se descarga zip, pero con error

--- a/SonarReportMaven/src/main/resources/plugin.properties
+++ b/SonarReportMaven/src/main/resources/plugin.properties
@@ -16,7 +16,7 @@
 #
 
 homepage.url=reportindaba/global_page
-homepage.name=CNES Report
+homepage.name=Global Page
 
 plugin.since=6.5
 plugin.defaultHost=http://localhost:9000
@@ -24,7 +24,7 @@ plugin.defaultHost=http://localhost:9000
 api.url=api/reportindaba
 api.description=Export a report in zip file.
 
-api.report.actionKey=report
+api.report.actionKey=global_page
 
 api.report.args.key=key
 api.report.args.description.key=Key of the project
