--- a/SonarReportMaven/pom.xml
+++ b/SonarReportMaven/pom.xml
@@ -28,6 +28,7 @@
         <sonar-packaging-maven-plugin.version>1.18.0.372</sonar-packaging-maven-plugin.version>
         <sonar.skipDependenciesPackaging>true</sonar.skipDependenciesPackaging>
         <sonar.useChildFirstClassLoader>true</sonar.useChildFirstClassLoader>
+		<sonar.versionApi>8.4.1.35646</sonar.versionApi>
 		<sonar.sources>src/main/java</sonar.sources>
 		<app.mainClass>report.configuration.ReportCommandLine</app.mainClass>
 		<sonar.pluginClass>config.ReportSonarPlugin</sonar.pluginClass>
@@ -37,7 +38,7 @@
   	<dependency>
 	    <groupId>com.google.code.gson</groupId>
 	    <artifactId>gson</artifactId>
-	    <version>2.3.1</version>
+	    <version>2.8.5</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.codehaus.sonar</groupId>
@@ -59,13 +60,13 @@
     <dependency>
         <groupId>org.sonarsource.sonarqube</groupId>
         <artifactId>sonar-plugin-api</artifactId>
-        <version>7.9.3</version>
+        <version>8.4.1.35646</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>org.sonarsource.sonarqube</groupId>
         <artifactId>sonar-ws</artifactId>
-        <version>7.9.3</version>
+        <version>8.4.1.35646</version>
         <scope>compile</scope>
     </dependency>
     <dependency>
@@ -124,7 +125,7 @@
     <dependency>
         <groupId>org.sonarsource.sonarqube</groupId>
         <artifactId>sonar-testing-harness</artifactId>
-        <version>7.9.3</version>
+        <version>8.4.1.35646</version>
         <scope>test</scope>
     </dependency>
     <dependency>
