--- a/SonarReportMaven/src/main/resources/report.properties
+++ b/SonarReportMaven/src/main/resources/report.properties
@@ -23,7 +23,7 @@ report.output=BASEDIR/DATE-NAME-analysis-report.docx
 #Issues' list filename's pattern DATE and NAME are placeholders
 issues.output=BASEDIR/DATE-NAME-issues-report.xlsx
 #Issues' list in CSV pattern, DATE and NAME are placeholders
-csv.output=BASEDIR/DATE-NAME-issues-report.csv
+csv.output=BASEDIR\DATE-NAME-issues-report.csv
 #Issues' list in Markdown pattern, DATE and NAME are placeholders
 markdown.output=BASEDIR/DATE-NAME-analysis-report.md
 #Report archive filename's pattern, DATE and NAME are placeholders
