Pre refactorización de código

--- a/SonarReportMaven/src/main/resources/plugin.properties
+++ b/SonarReportMaven/src/main/resources/plugin.properties
@@ -1,13 +1,19 @@
+# File to define plugin properties. 
+#
+# It has the api requested params and plugin settings. 
 
+# SonarQubes plugin URL
 homepage.url=reportindaba/global_page
+# SonarQubes plugin name
 homepage.name=Global Page
-
+# Minimum version of SonarQube
 plugin.since=6.5
 plugin.defaultHost=http://localhost:9000
-
+# Plugin URL necessary for SonarQube
 api.url=api/reportindaba
+# Plugin descripion
 api.description=Export a report in zip file.
-
+# Plugin key
 api.report.actionKey=global_page
 
 api.report.args.key=key
